Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15014

[5.5] Assertion `m_cache_lock_status == LOCKED_NO_WAIT || m_cache_status == DISABLE_REQUEST' failed in Query_cache::free_cache on startup

    XMLWordPrintable

Details

    Description

      Start debug 5.5 server with --query_cache_type=0, otherwise defaults

      mysqld: /data/src/5.5/sql/sql_cache.cc:2697: void Query_cache::free_cache(): Assertion `m_cache_lock_status == LOCKED_NO_WAIT || m_cache_status == DISABLE_REQUEST' failed.
      180122  0:45:07 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007fb1b91a1ee2 in __assert_fail () from /lib/x86_64-linux-gnu/libc.so.6
      #8  0x00000000005baad7 in Query_cache::free_cache (this=0x14d53c0 <query_cache>) at /data/src/5.5/sql/sql_cache.cc:2696
      #9  0x00000000005b9fb2 in Query_cache::init (this=0x14d53c0 <query_cache>) at /data/src/5.5/sql/sql_cache.cc:2480
      #10 0x00000000005572c7 in init_server_components () at /data/src/5.5/sql/mysqld.cc:4112
      #11 0x0000000000558897 in mysqld_main (argc=12, argv=0x7fb1b885f190) at /data/src/5.5/sql/mysqld.cc:4891
      #12 0x0000000000550e96 in main (argc=12, argv=0x7ffc66664508) at /data/src/5.5/sql/main.cc:25
      

      No visible effect on a non-debug build.

      Attachments

        Activity

          People

            cvicentiu Vicențiu Ciorbaru
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 40m
                40m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.