MDEV-15014 Assertion `m_cache_lock_status == LOCKED_NO_WAIT || m_cache_status == DISABLE_REQUEST' failed in Query_cache::free_cache on startup

The assert guards against not-locked or not-requested query cache
disabling. If during startup we disable query cache, we failed to
request disabling.